--- a/Puzzle2048/Storyboard/Base.lproj/LaunchScreen.storyboard
+++ b/Puzzle2048/Storyboard/Base.lproj/LaunchScreen.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -26,7 +25,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" name="PrimaryColor"/>
+                        <color key="backgroundColor" red="0.86274509803921573" green="0.74117647058823533" blue="0.24313725490196078" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="0qc-Wm-CgR" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fEb-ih-gOc"/>
                             <constraint firstItem="0qc-Wm-CgR" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="fe6-OM-dUT"/>
@@ -39,9 +38,4 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
-    <resources>
-        <namedColor name="PrimaryColor">
-            <color red="0.82352941176470584" green="0.73333333333333328" blue="0.396078431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-    </resources>
 </document>
